--- a/auto_off_30s.yaml
+++ b/auto_off_30s.yaml
@@ -1,7 +1,20 @@
-blueprint: name: Auto-Off After 30 Seconds domain: automation input:
-target_switch: name: Switch selector: entity: domain: switch
+blueprint:
+  name: Auto-Off After 30 Seconds
+  domain: automation
+  input:
+    target_switch:
+      name: Switch
+      selector:
+        entity:
+          domain: switch
 
-trigger: - platform: state entity_id: !input target_switch to: “on”
+trigger:
+  - platform: state
+    entity_id: !input target_switch
+    to: "on"
 
-action: - delay: “00:00:30” - service: switch.turn_off target:
-entity_id: !input target_switch
+action:
+  - delay: "00:00:30"
+  - service: switch.turn_off
+    target:
+      entity_id: !input target_switch
